# frontend/src/openapi.json
@@ -116,10 +116,10 @@
         ]
       }
     },
-    "/example/api/modify/user/settings/": {
-      "post": {
-        "operationId": "example_api_general_modify_user_settings",
-        "summary": "Modify User Settings",
+    "/example/api/settings/": {
+      "get": {
+        "operationId": "example_api_general_get_user_settings",
+        "summary": "Get current user's settings",
         "parameters": [],
         "responses": {
           "200": {
@@ -127,21 +127,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "additionalProperties": true,
-                  "title": "Response",
-                  "type": "object"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "additionalProperties": true,
-                  "title": "Response",
-                  "type": "object"
+                  "$ref": "#/components/schemas/UserSettingsSchema"
                 }
               }
             }
@@ -162,6 +148,53 @@
         "tags": [
           "General"
         ],
+        "security": [
+          {
+            "SessionAuth": []
+          }
+        ]
+      },
+      "put": {
+        "operationId": "example_api_general_update_user_settings",
+        "summary": "Update current user's settings",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserSettingsSchema"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "additionalProperties": true,
+                  "title": "Response",
+                  "type": "object"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "General"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserSettingsUpdateRequest"
+              }
+            }
+          },
+          "required": true
+        },
         "security": [
           {
             "SessionAuth": []
@@ -352,7 +385,7 @@
         "type": "object"
       },
       "UserData": {
-        "description": "Schema for user data, including character ID and character name.\n\nParameters:\n    user_id (int): The ID of the user.\n    character_id (int): The ID of the character associated with the user.\n    character_name (str): The name of the character.\n    corporation_id (int): The ID of the corporation associated with the user.\n    corporation_name (str): The name of the corporation associated with the user.\n    alliance_id (int | None): The ID of the alliance associated with the user, if any.\n    alliance_name (str | None): The name of the alliance associated with the user, if any.\n    portrait (str | None): The URL or path to the character's portrait image.\n    is_admin (boolean): The admin status for the user.\n    notification (boolean): The notification status for the user.",
+        "description": "Schema for user data, including character ID and character name.\n\nParameters:\n    user_id (int): The ID of the user.\n    character_id (int): The ID of the character associated with the user.\n    character_name (str): The name of the character.\n    corporation_id (int): The ID of the corporation associated with the user.\n    corporation_name (str): The name of the corporation associated with the user.\n    alliance_id (int | None): The ID of the alliance associated with the user, if any.\n    alliance_name (str | None): The name of the alliance associated with the user, if any.\n    portrait (str | None): The URL or path to the character's portrait image.\n    is_admin (boolean): The admin status for the user.",
         "properties": {
           "user_id": {
             "title": "User Id",
@@ -411,10 +444,6 @@
             "default": false,
             "title": "Is Admin",
             "type": "boolean"
-          },
-          "notification": {
-            "title": "Notification",
-            "type": "boolean"
           }
         },
         "required": [
@@ -422,10 +451,35 @@
           "character_id",
           "character_name",
           "corporation_id",
-          "corporation_name",
-          "notification"
+          "corporation_name"
         ],
         "title": "UserData",
+        "type": "object"
+      },
+      "UserSettingsSchema": {
+        "properties": {
+          "disable_notifications": {
+            "title": "Disable Notifications",
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "disable_notifications"
+        ],
+        "title": "UserSettingsSchema",
+        "type": "object"
+      },
+      "UserSettingsUpdateRequest": {
+        "properties": {
+          "disable_notifications": {
+            "title": "Disable Notifications",
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "disable_notifications"
+        ],
+        "title": "UserSettingsUpdateRequest",
         "type": "object"
       }
     },
